--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -4,15 +4,18 @@
     
   </div>
   <div class="main--footer">
-    <div class="main--footer--icon ion-activatable">
+    <div class="main--footer--icon ion-activatable" 
+    [ngClass]="{ 'main--footer--icon--selected': currentSelectedFooter === footerState.CATEGORIES }">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-icon src="../../assets/images/template.svg"></ion-icon>
     </div>
-    <div class="main--footer--icon ion-activatable ">
+    <div class="main--footer--icon ion-activatable " 
+    [ngClass]="{ 'main--footer--icon--selected': currentSelectedFooter === footerState.ALL_COMMENTS }">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-icon src="../../assets/images/mensages.svg"></ion-icon>
     </div>
-    <div class="main--footer--icon ion-activatable ">
+    <div class="main--footer--icon ion-activatable " 
+    [ngClass]="{ 'main--footer--icon--selected': currentSelectedFooter === footerState.MY_COMMENTS }">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-icon src="../../assets/images/home.svg"></ion-icon>
     </div>
