--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,6 +75,7 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
+  --bird-light: white;
   --bird-primary: #3dd598;
   --bird-dark: #38444e;
   --bird-darker: #1f2b35;
