--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,9 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+@import './theme/outline.scss';
+@import './theme/typography.scss';
+
 html {
   font-size: 10px;
 }
