--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,6 +77,7 @@
 
   --bird-light: white;
   --bird-primary: #3dd598;
+  --bird-primary-dark: #286053;
   --bird-dark: #38444e;
   --bird-darker: #1f2b35;
   --bird-dark-contrast: #96a7af;
