feat(create-comment): added initial implementation

--- a/src/app/pages/main/create-comment/create-comment.page.html
+++ b/src/app/pages/main/create-comment/create-comment.page.html
@@ -1,9 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>create-comment</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="">
 
-<ion-content>
-
-</ion-content>
+</div>
