feat(create-comment): added layout for this page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -78,8 +78,10 @@
   --bird-light: white;
   --bird-primary: #3dd598;
   --bird-primary-dark: #286053;
+  --bird-medium: #96a7af;
   --bird-dark: #38444e;
   --bird-darker: #1f2b35;
+  --bird-deep: #1A282F;
   --bird-dark-contrast: #96a7af;
 }
 
