--- a/src/app/pages/main/create-comment/create-comment.page.html
+++ b/src/app/pages/main/create-comment/create-comment.page.html
@@ -1,3 +1,49 @@
-<div class="">
+<div class = "comment">
+  <div class = "bird--header-create">
+    <div class = "bird--header-create--detail"></div>
+    <h1>Criar Comentário</h1>
+    <p>Por favor, preencha os campos a baixo</p>
+  </div>
+  <form>
 
+    <div class = "bird--input">
+      <ion-icon name = "person-outline"></ion-icon>
+      <input  placeholder = "Seu nome" 
+              type="text" />
+    </div>
+
+    <div class="comment--avatar">
+      <ng-container *ngFor="let avatar of listAvatar">
+        <div class="comment--avatar--item--containner">
+          <div  [style.background]="avatar.personColor" 
+                class="comment--avatar--item ion-activatable">
+            <ion-ripple-effect></ion-ripple-effect>
+            <img  [src]="avatar.personEmoji" 
+                  als="Avatar"/>
+          </div>
+        </div>
+      </ng-container>
+    </div>
+
+    <div class = "bird--input">
+      <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+      <textarea  placeholder = "Digite o seu comentário" 
+              type="text" ></textarea>
+    </div>
+
+    <button class="comment--buttons">
+      
+      <button [routerLink] = "['/main/categories', categoryId ]" class = "bird--back-button ion-activatable">
+        <ion-ripple-effect></ion-ripple-effect>
+        <ion-icon src="assets/images/left_arrow.svg"></ion-icon>
+      </button>
+
+      <button class="bird--send-button ion-activatable">
+        <ion-ripple-effect></ion-ripple-effect>
+        <span>Criar</span>
+        <ion-icon src="assets/images/right_arrow.svg"></ion-icon>
+      </button>
+
+    </button>
+  </form>
 </div>
