--- a/src/theme/buttons.scss
+++ b/src/theme/buttons.scss
@@ -31,6 +31,36 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  outline: none;
+
+  ion-icon {
+    font-size: 1.6rem;
+  }
+}
+
+.bird--send-button {
+  background: linear-gradient(180deg, #40DF9F 0%, #3ED598 100%);
+  box-shadow: 0px 2px 4px rgba(15, 218, 137, 0.3);
+  border-radius: 1.2rem;
+
+  position: relative;
+  overflow: hidden;
+  
+  height: 6rem;
+  width: var(--send-button-width, 100%);
+
+  outline: none;
+  color: var(--bird-light);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  span {
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-right: .8rem;
+  }
 
   ion-icon {
     font-size: 1.6rem;
