feat(create-comment): implemented create new comment for category

--- a/src/app/pages/main/create-comment/create-comment.page.scss
+++ b/src/app/pages/main/create-comment/create-comment.page.scss
@@ -45,6 +45,7 @@
     margin-top: 2.4rem;
     width: 100%;
     background: none;
+    outline: none;
 
     button:first-child {
       margin-right: 1.2rem;
