--- a/src/app/pages/main/create-comment/create-comment.page.html
+++ b/src/app/pages/main/create-comment/create-comment.page.html
@@ -4,31 +4,38 @@
     <h1>Criar Comentário</h1>
     <p>Por favor, preencha os campos a baixo</p>
   </div>
-  <form>
+  <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
 
     <div class = "bird--input">
       <ion-icon name = "person-outline"></ion-icon>
-      <input  placeholder = "Seu nome" 
+      <input  placeholder = "Seu nome"
+              formControlName = "personName"
               type="text" />
     </div>
 
     <div class="comment--avatar">
-      <ng-container *ngFor="let avatar of listAvatar">
-        <div class="comment--avatar--item--containner">
+      <ng-container *ngFor="let avatar of listAvatar; let i = index">
+
+        <div  class="comment--avatar--item--containner" 
+              (click)="formGroup.controls.personAvatarIndex.setValue(i)">
           <div  [style.background]="avatar.personColor" 
+                [class.comment--avatar--item--selected] = "formGroup.controls.personAvatarIndex.value === i"
                 class="comment--avatar--item ion-activatable">
             <ion-ripple-effect></ion-ripple-effect>
             <img  [src]="avatar.personEmoji" 
                   als="Avatar"/>
           </div>
         </div>
+
       </ng-container>
     </div>
 
     <div class = "bird--input">
       <ion-icon name="chatbox-ellipses-outline"></ion-icon>
-      <textarea  placeholder = "Digite o seu comentário" 
-              type="text" ></textarea>
+      <textarea placeholder = "Digite o seu comentário"
+                formControlName = "message" 
+                type="text" >
+      </textarea>
     </div>
 
     <button class="comment--buttons">
@@ -38,7 +45,9 @@
         <ion-icon src="assets/images/left_arrow.svg"></ion-icon>
       </button>
 
-      <button class="bird--send-button ion-activatable">
+      <button class="bird--send-button ion-activatable"
+              [disabled] = "formGroup.status === 'INVALID' || isSendingForm"
+              type="submit">
         <ion-ripple-effect></ion-ripple-effect>
         <span>Criar</span>
         <ion-icon src="assets/images/right_arrow.svg"></ion-icon>
