--- a/src/theme/buttons.scss
+++ b/src/theme/buttons.scss
@@ -62,6 +62,12 @@
     margin-right: .8rem;
   }
 
+  &[disabled] {
+    opacity: .5;
+    cursor: none;
+    pointer-events: none;
+  }
+
   ion-icon {
     font-size: 1.6rem;
   }
