--- a/src/app/pages/main/create-comment/create-comment.page.html
+++ b/src/app/pages/main/create-comment/create-comment.page.html
@@ -38,7 +38,7 @@
       </textarea>
     </div>
 
-    <button class="comment--buttons">
+    <div class="comment--buttons">
       
       <button [routerLink] = "['/main/categories', categoryId ]" class = "bird--back-button ion-activatable">
         <ion-ripple-effect></ion-ripple-effect>
@@ -53,6 +53,6 @@
         <ion-icon src="assets/images/right_arrow.svg"></ion-icon>
       </button>
 
-    </button>
+    </div>
   </form>
 </div>
